1. seperate index.html to home page and main page 2. add skills section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <!-- Header -->
     <header class="header">
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg bg-light">
         <div class="container">
           <a class="navbar-brand" href="#">Zhiyi Jin</a>
 
@@ -38,16 +38,16 @@
                 <a class="nav-link" href="#home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#about">About</a>
+                <a class="nav-link" href="./main.html#about">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#skills">Skills</a>
+                <a class="nav-link" href="./main.html#skills">Skills</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#experience">Experience</a>
+                <a class="nav-link" href="./main.html#experience">Experience</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#education">Education</a>
+                <a class="nav-link" href="./main.html#education">Education</a>
               </li>
             </ul>
           </div>
@@ -118,41 +118,6 @@
           </div>
         </div>
       </section>
-      <!-- About -->
-      <section id="about">
-        <h2 class="section-title">About</h2>
-        <span class="section-subtitle"> My Introduction </span>
-        <div class="container">
-          <div class="text-center">
-            <img
-              src="images/myself.jpg"
-              alt="myself photo"
-              id="myPhoto"
-              class="img-fluid"
-            />
-          </div>
-          <div class="about__data">
-            <p class="about__description" id="home-about">
-              I have worked as an infotainment software and system engineer for
-              8+ years in the automotive industry where I was exposed to
-              different IT technologies and solutions which made me realize the
-              importance of CS technology in building a safer and smarter car.
-              This made me choose the MSCS program where I am trying to lay a
-              solid foundation in this field. On a personal level, I am
-              meticulous, organized and precise in my work. I am easy to
-              collaborate with and work efficiently under pressure. Currently I
-              am looking forward to restarting my career as SDE for the 2023
-              summer internship.
-            </p>
-          </div>
-        </div>
-      </section>
-      <!-- Skills -->
-      <section id="skills"></section>
-      <!-- Experience -->
-      <section id="experience"></section>
-      <!-- Educations -->
-      <section id="educations"></section>
     </main>
     <!-- Footer -->
 
