1. add experience section 2. add footer

--- a/main.html
+++ b/main.html
@@ -46,9 +46,6 @@
               <li class="nav-item">
                 <a class="nav-link" href="#experience">Experience</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#education">Education</a>
-              </li>
             </ul>
           </div>
         </div>
@@ -137,12 +134,12 @@
                 <div
                   class="progress-bar"
                   role="progressbar"
-                  style="width: 10%"
-                  aria-valuenow="25"
+                  style="width: 30%"
+                  aria-valuenow="35"
                   aria-valuemin="0"
                   aria-valuemax="100"
                 >
-                  10%
+                  30%
                 </div>
               </div>
 
@@ -151,12 +148,12 @@
                 <div
                   class="progress-bar"
                   role="progressbar"
-                  style="width: 75%"
-                  aria-valuenow="25"
+                  style="width: 55%"
+                  aria-valuenow="55"
                   aria-valuemin="0"
                   aria-valuemax="100"
                 >
-                  75%
+                  55%
                 </div>
               </div>
               <h4 class="progress-header">CSS</h4>
@@ -164,12 +161,12 @@
                 <div
                   class="progress-bar"
                   role="progressbar"
-                  style="width: 75%"
-                  aria-valuenow="25"
+                  style="width: 55%"
+                  aria-valuenow="55"
                   aria-valuemin="0"
                   aria-valuemax="100"
                 >
-                  75%
+                  55%
                 </div>
               </div>
             </div>
@@ -194,12 +191,12 @@
                 <div
                   class="progress-bar"
                   role="progressbar"
-                  style="width: 80%"
-                  aria-valuenow="25"
+                  style="width: 50%"
+                  aria-valuenow="50"
                   aria-valuemin="0"
                   aria-valuemax="100"
                 >
-                  80%
+                  50%
                 </div>
               </div>
               <h4>VSCode</h4>
@@ -207,12 +204,12 @@
                 <div
                   class="progress-bar"
                   role="progressbar"
-                  style="width: 80%"
-                  aria-valuenow="25"
+                  style="width: 50%"
+                  aria-valuenow="50"
                   aria-valuemin="0"
                   aria-valuemax="100"
                 >
-                  80%
+                  50%
                 </div>
               </div>
               <h4>Git</h4>
@@ -232,13 +229,75 @@
           </div>
         </div>
       </section>
-      <!-- Experience -->
-      <section id="experience"></section>
-      <!-- Educations -->
-      <section id="educations"></section>
+      <!-- Experience & Educations -->
+      <section id="experience">
+        <h2 class="section-title">Education & Experience</h2>
+        <div class="container">
+          <div class="time-line">
+            <div class="block">
+              <h4>2022 - Present</h4>
+              <h3>M.S. CS at Northeastern University</h3>
+              <p>
+                Related Coursework: Algorithms, Web Development, Mobile
+                Development
+              </p>
+            </div>
+
+            <div class="block">
+              <h4>2020 - 2022</h4>
+              <h3>Software Engineer at PATAC</h3>
+              <p>
+                Performed application development for Android based Car
+                Infotainment systems using Java, MVVM + CLEAN architecture.
+              </p>
+            </div>
+
+            <div class="block">
+              <h4>2009 - 2012</h4>
+              <h3>M.E. in Automotive Engineering at Tongji University</h3>
+              <p>Focus on Automotive Electronics</p>
+            </div>
+
+            <div class="block">
+              <h4>2018 - 2020</h4>
+              <h3>System Engineer at PATAC</h3>
+              <p>
+                Involved in the full life cycle of the Virtual Cockpit System
+                project including planning, designing, development, testing and
+                deployment.
+              </p>
+            </div>
+
+            <div class="block">
+              <h4>2005 - 2009</h4>
+              <h3>B.E. in Material Forming and Control Engineering at ECUST</h3>
+              <p>Addicted to embedded system design & development</p>
+            </div>
+
+            <div class="block">
+              <h4>2012 - 2014</h4>
+              <h3>Software Engineer at Delphi</h3>
+              <p>
+                Designed and implemented a technical solution that enables
+                connection between infotainment and Android smartphones based on
+                Bluetooth and voice recognition technology to leverage the
+                function of low-level infotainment systems.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- Footer -->
-
+    <footer>
+      <div class="bottom-container">
+        <a class="footer-link" href="https://www.linkedin.com/in/zhiyijin/"
+          >LinkedIn</a
+        >
+        <a class="footer-link" href="https://twitter.com/victoryjzy">Twitter</a>
+        <p class="copyright">© 2022 Zhiyi Jin All rights reserved.</p>
+      </div>
+    </footer>
     <script
       src="https://kit.fontawesome.com/8ec949be44.js"
       crossorigin="anonymous"
