fix a bug of navbar attribute of aria-controls that found by W3C Compliant

--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navmenu"
-            aria-controls="navbarResponsive"
+            aria-controls="navmenu"
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
