--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navmenu"
-            aria-controls="navbarResponsive"
+            aria-controls="navmenu"
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
@@ -76,15 +76,6 @@
             </a>
           </div>
           <div class="contact-info">
-            <ul id="contact-list">
-              <li><i class="fas fa-phone-alt"></i> (510) 809-5798</li>
-              <li>
-                <i class="far fa-envelope"></i>
-                <a href="mailto:jin.zhiy@northeastern.edu"
-                  >jin.zhiy@northeastern.edu</a
-                >
-              </li>
-            </ul>
             <ul id="social-media-list" class="list-group list-group-horizontal">
               <li class="list-group-item">
                 <a
