--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
               </li>
             </ul>
           </div>
+
+          <div class="theme-btn">
+            <i class="fa-regular fa-moon" id="theme-button"></i>
+          </div>
         </div>
       </nav>
     </header>
@@ -112,6 +116,7 @@
     </main>
     <!-- Footer -->
 
+    <script src="./scripts/main.js"></script>
     <script
       src="https://kit.fontawesome.com/8ec949be44.js"
       crossorigin="anonymous"
