1.modify some css style 2.change the text color when the background color become dark

--- a/index.html
+++ b/index.html
@@ -46,12 +46,8 @@
               <li class="nav-item">
                 <a class="nav-link" href="./main.html#experience">Experience</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./main.html#education">Education</a>
-              </li>
             </ul>
           </div>
-
           <div class="theme-btn">
             <i class="fa-regular fa-moon" id="theme-button"></i>
           </div>
@@ -64,8 +60,8 @@
       <section id="home">
         <div class="container">
           <img src="images/photo.png" alt="img-photo" />
-          <h2 class="title">Hello, I'm Zhiyi Jin</h2>
-          <p class="intro">
+          <h2 class="title" id="title-txt">Hello, I'm Zhiyi Jin</h2>
+          <p class="intro" id="intro-txt">
             Software Engineer | MSCS@Northeastern University | Seeking 2023
             Summer SDE Internship
           </p>
@@ -116,7 +112,7 @@
     </main>
     <!-- Footer -->
 
-    <script src="./scripts/main.js"></script>
+    <script src="./scripts/index.js"></script>
     <script
       src="https://kit.fontawesome.com/8ec949be44.js"
       crossorigin="anonymous"
