add email in the home page

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             Software Engineer | MSCS@Northeastern University | Seeking 2023
             Summer SDE Internship
           </p>
+          <div id="email">Email: jin.zhiy@northeastern.edu</div>
           <div class="resume">
             <a
               href="https://drive.google.com/file/d/1ZAZsGkQJG76GoNvIUBlBi465aquQQ_MA/view?usp=sharing"
