--- a/main.html
+++ b/main.html
@@ -108,7 +108,7 @@
                 <div
                   class="progress-bar"
                   role="progressbar"
-                  style="width: 55%"
+                  style="width: 55%" <!-- I think it's better to move this inline CSS to external -->
                   aria-valuenow="55"
                   aria-valuemin="0"
                   aria-valuemax="100"
@@ -156,7 +156,7 @@
                   55%
                 </div>
               </div>
-              <h4 class="progress-header">CSS</h4>
+              <h4 class="progress-header">CSS</h4> <!-- Also, I found the text in skills is too packed, maybe adding a few padding-top is better -->
               <div class="progress" style="height: 20px">
                 <div
                   class="progress-bar"
